--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   html_character_entities: ^1.0.0+1
+  colours: ^0.0.2
+  shimmer_animation: ">1.0.0 <2.3.0-beta"
 
 dev_dependencies:
   flutter_test:
